--- a/ADT_ll/Makefile
+++ b/ADT_ll/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -std=gnu99 -pedantic -Wall -Werror
 
 node: node.o
-	$(CC) $(CFLAGS) -o node node.o
+	$(CC) $(CFLAGS) -o node.o
 
 node.o: node.c
 	$(CC) $(CFLAGS) -c node.c
