Adding main file to test the list and adding getSize function

--- a/ADT_ll/Makefile
+++ b/ADT_ll/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -std=gnu99 -pedantic -Wall -Werror
 
-node: node.o
-	$(CC) $(CFLAGS) -o node.o
+main: main.c node.o
+	$(CC) $(CFLAGS) -o main main.c node.o
 
 node.o: node.c
 	$(CC) $(CFLAGS) -c node.c
