--- a/image_processing/Makefile
+++ b/image_processing/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-OBJS = image.o image.c
+OBJS = image.c
 CFLAGS = -std=gnu99 -Wall -Werror -pedantic
 .RECIPEPREFIX = >
 
@@ -7,8 +7,5 @@ test : $(OBJS)
 > $(CC)	$(CFLAGS) -o $@ $^
 > @echo ""$@" Compiled successfully!"
 
-image.o : image.c
-> $(CC) $(CFLAGS) -c image.c
-
 clean:
-> rm -rf *.o *~ .#* *#
+> rm -rf test *.o *~ .#* *#
